2003-10-29  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am (INCLUDES): Remove *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.h:
	* tetris.cpp: Replaced deprecated gtk+ functions. Also fixed a
	warning generated when the bg loading code struck a name that
	wasn't a .png or a .jpg (like <none>).

2003-08-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* tetris.cpp: 
	* scoreframe.cpp (ScoreFrame): GConf return value checks.

2003-07-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnome-canvas-pimage.c: Removed dead code, gets rid of warnings.

2003-07-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnometris.desktop.in: Update name to fit HIG (bug 116916).

2003-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnometris.schemas.in: Remove full-stop at the end of the short
	description and add descriptions for line_fill_* .

2003-06-20  William Jon McCann  <mccann@jhu.edu>

	* gnome-canvas-pimage.c (gnome_canvas_pimage_draw): Convert to
	pixbufs.  This will allow us to support block images with an
	alpha layer.
	(dist_to_mask): Perform some checks for NULL images.

	* tetris.cpp (setupPixmap): Removed unused pix pixmap.

	* preview.cpp (paint): Use pixbuf for preview.

	* tetris.cpp (setupPixmap): Argh, fixed my typo.
	(setupPixmap): Don't leak fullpixname.

2003-06-19  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp: #define all the gconf keys for convenience.
	(setupPixmap):
	(gameProperties): Use g_build_filename.

	* scoreframe.cpp (ScoreFrame): Convert to gconf.

2003-06-17  William Jon McCann  <mccann@jhu.edu>

	* gnome-canvas-pimage.c: Removed unused vars.

2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* tetris.cpp: 