@@ -1,3 +1,14 @@
+2003-11-03  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* tetris.cpp: 
+	* scoreframe.cpp: Repackage the score widgets to avoid the window
+	resizing as the score changes.
+
+	* tetris.cpp: 
+	* preview.h:	
+	* preview.cpp: Reworked the preview pane code to remove drawing
+	glitches and to use GTK+ to do most of the hard work.
+
 2003-10-29  Callum McKenzie  <callum@localhost.localdomain>
 
 	* Makefile.am (INCLUDES): Remove *_DISABLE_DEPRECATED.
